# spec-kit-flow

./: README.md  SUPPORT.md  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/agents/: speckit-flow.agent.md
.github/instructions/: code-quality.instructions.md  performance.instructions.md  speckit-flow.instructions.md  task-workflow.instructions.md  testing.instructions.md  traceability.instructions.md  user-experience.instructions.md
.github/prompts/: check-status.prompt.md  generate-dag.prompt.md  implement-task.prompt.md  review-traceability.prompt.md  verify-task.prompt.md
docs/: INSTALL-REFERENCE.md  PHASE-1-COMPLETE.md  PHASE-2-COMPLETE.md  T002-completion-summary.md  T004-completion-summary.md  T005-completion-summary.md  T006-completion-summary.md  T006-verification-report.md  T007-completion-summary.md  T007-final-verification.md  T007-verification-report.md  T008-completion-summary.md  T008-verification-report.md  T009-completion-summary.md  T009-verification-report.md  T010-T011-T012-completion-summary.md  T010-verification-report.md  T013-completion-summary.md  T013-verification-report.md  T014-T015-T016-completion-summary.md  T017-completion-summary.md  T017-verification-report.md  T018-completion-summary.md  T018-verification-report.md  T019-completion-summary.md  T019-verification-report.md  T020-completion-summary.md  T020-verification-report.md  T021-completion-summary.md  T021-verification-report.md  T022-completion-summary.md  T022-verification-report.md  T023-completion-summary.md  T023-verification-report.md  T024-completion-summary.md  T024-verification-report.md  T025-completion-summary.md  T025-verification-report.md  T026-completion-summary.md  T026-verification-report.md  (+47 more)
scripts/: compare_paths_impl.py  demo_t031.py  example_dag_engine.py  final_test_t020.py  quick_test_t008.py  quick_test_t020.py  quick_test_t021.py  quick_test_t022.py  quick_test_t023.py  quick_test_t024.py  quick_test_t025.py  quick_test_t026.py  quick_verify_t014_t015_t016.py  test_t005_imports.py  test_t006_basic.py  test_t007_basic.py  test_t008_structure.py  test_t029.py  test_t030.py  test_t031.py  test_t032.py  test_t033.py  validate_t002.py  validate_t004.py  validate_t005.py  validate_t006.py  validate_t007.py  validate_t008.py  validate_t009.py  validate_t010_t011_t012.py  validate_t013.py  validate_t014_t015_t016.py  validate_t017.py  validate_t018.py  validate_t019.py  validate_t020.py  validate_t021.py  validate_t022.py  validate_t023.py  validate_t024.py  (+13 more)
specs/speckit-flow/: plan.md  tasks.md  traceability.md
src/specify_cli/: __init__.py  pyproject.toml
src/speckit_core/: __init__.py  config.py  exceptions.py  models.py  paths.py  pyproject.toml  tasks.py
src/speckit_flow/: __init__.py  __main__.py  exceptions.py  pyproject.toml
src/speckit_flow/agents/: __init__.py  base.py  copilot.py
src/speckit_flow/monitoring/: __init__.py  dashboard.py
src/speckit_flow/orchestration/: __init__.py  completion.py  dag_engine.py  session_coordinator.py
src/speckit_flow/state/: __init__.py  manager.py  models.py  recovery.py
src/speckit_flow/worktree/: __init__.py  manager.py  merger.py
templates/: tasks-template.md
templates/commands/: tasks.md
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_abort_command.py  test_complete_command.py  test_init_command.py  test_run_with_dashboard.py  test_specify_cli.py  test_status_command.py
tests/unit/speckit_core/: __init__.py  test_config.py  test_models.py  test_package_structure.py  test_paths.py  test_tasks.py
tests/unit/speckit_flow/: __init__.py
tests/unit/speckit_flow/agents/: __init__.py  test_copilot.py
tests/unit/speckit_flow/monitoring/: test_dashboard.py
tests/unit/speckit_flow/orchestration/: __init__.py  test_completion.py  test_completion_watching.py  test_dag_engine.py  test_dag_phases.py  test_dag_serialization.py  test_dag_sessions.py  test_session_coordinator_phase.py  test_session_coordinator_run.py  test_unified_completion.py
tests/unit/speckit_flow/state/: __init__.py  test_manager.py  test_models.py  test_recovery.py
tests/unit/speckit_flow/worktree/: __init__.py  test_manager.py  test_merger.py
